viteful/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viteful
spec:
  ingressClassName: traefik
  rules:
    - host: <path:secret/data/viteful/dev/ingress#HOST>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: viteful-frontend
                port:
                  number: 80
